# Ramsay-Bot

./: Cargo.toml  insults.txt
src/: main.rs
