[package]
name = "Ramsay-Bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version="0.11.5", default-features=false, features=["builder","cache","client","gateway","model",
"utils", "rustls_backend","framework","standard_framework"]}

dotenv = "0.15.0"
rand = "0.8.5"
regex = "1.6.0"
lazy_static = "1.4.0"
tokio = {version = "1.21.0", features=["macros","rt-multi-thread"]}
songbird = "0.3.0"